configure postgresql and fix jwt authentication